--- a/gleitschirm.html
+++ b/gleitschirm.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang='de'>
-    <head>
-        <meta> CHARSET='UTF-8'>
-        <title>Gleitschirmfliegen - Tipps und Ausrüstung</title>
-    </head>
+<head>
+    <meta>
+    CHARSET='UTF-8'>
+    <title>Gleitschirmfliegen - Tipps und Ausrüstung</title>
+</head>
 <body>
 <h1>Gleitschirmfliegen - Einsteigertipps und Ausrüstung</h1>
 <h2>Einführung ins Gleitschirmfliegen</h2>
