--- a/motorrad.html
+++ b/motorrad.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang='de'>
 <head>
-    <meta> CHARSET='UTF-8'>
+    <meta>
+    CHARSET='UTF-8'>
     <title>Motorräder - beste Modelle und Marken</title>
 </head>
 <body>
